Fix CSS whitespace-below-footer bugs.

--- a/client/app/sidebar/minimap.styl
+++ b/client/app/sidebar/minimap.styl
@@ -19,8 +19,10 @@
 // at a weird location, resulting in weird page dimensions when calculating minimap size.
 #dw-any-sidebar
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right 0;
+  bottom 0;
+  left 0;
 
 
 #dw-minimap
